<!--
  ~ Copyright (c) 2020 Dennis Lang (LanDen Labs) landenlabs@gmail.com
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the
  ~ following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN
  ~ NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ @author Dennis Lang
  ~ @see http://LanDenLabs.com/
  -->

<resources>
    <string name="app_name">all-UiTest</string>
    <string name="bottomnav_menu_title">UI Test Pages</string>
    <string name="about_menu_title">About</string>

    <string name="bottom_nav_frag_gridview">Expand Grid</string>
    <string name="bottom_nav_frag_divider">Dividers</string>
    <string name="bottom_nav_expand">Expand Table</string>
    <string name="bottom_nav_group_view">Expand Views</string>
    <string name="bottom_nav_group_image">Expand Image</string>
    <string name="bottom_nav_bitmapshader">Bitmap Shader</string>
    <string name="bottom_nav_anim_border">Anim Border</string>
    <string name="bottom_nav_anim_view">Anim View</string>

    <string name="about_text">Demonstrate Layout cell scaling animation.\n\nSource code and guide at https://landenlabs.com/android\n\nCopyright Dennis Lang 2019</string>
    <string name="side_nav_header_1">All Demo</string>

    <string name="setting_menu_1">Settings Menu 1</string>
    <string name="setting_menu_2">Settings Menu 2</string>
    <string name="setting_menu_3">Settings Menu 3</string>
    <string name="page7_text_msg">This is a test of the TextViewExt1 blah blah blah blah blah blah</string>
</resources>
