<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Dennis Lang (LanDen Labs) landenlabs@gmail.com
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the
  ~ following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN
  ~ NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ @author Dennis Lang
  ~ @see http://LanDenLabs.com/
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Bottom Navigation Tab Bar -->
    <!-- Bottom Navigation Tab Bar only supports 5 items, use RadioGroup for more -->
    <!-- Same ids as nav_bottom.xml so nav controller can be used -->
    <item
        android:id="@+id/fragGridViewDemo"
        android:icon="@drawable/tab_gridview"
        android:title="@string/bottom_nav_frag_gridview"/>
    <item
        android:id="@+id/fragDividerDemo"
        android:icon="@drawable/tab_divider"
        android:title="@string/bottom_nav_frag_divider"/>
    <item
        android:id="@+id/fragExpandDemo"
        android:icon="@drawable/tab_table"
        android:title="@string/bottom_nav_expand"/>

    <item
        android:id="@+id/fragExpandGroupViewDemo"
        android:icon="@drawable/tab_table"
        android:title="@string/bottom_nav_group_view"/>

    <item
        android:id="@+id/fragExpandGroupImageDemo"
        android:icon="@drawable/tab_table"
        android:title="@string/bottom_nav_group_image"/>

    <item
        android:id="@+id/fragBitmapShaderDemo"
        android:icon="@drawable/tab_table"
        android:title="@string/bottom_nav_bitmapshader"/>

    <item
        android:id="@+id/fragAnimBorderDemo"
        android:icon="@drawable/tab_table"
        android:title="@string/bottom_nav_anim_border"/>

    <item
        android:id="@+id/fragAnimViewDemo"
        android:icon="@drawable/tab_table"
        android:title="@string/bottom_nav_anim_view"/>


</menu>