<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Dennis Lang (LanDen Labs) landenlabs@gmail.com
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the
  ~ following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN
  ~ NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ @author Dennis Lang
  ~ @see http://LanDenLabs.com/
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bottom"
    app:startDestination="@id/fragGridViewDemo">

    <fragment
        android:label="@string/bottom_nav_frag_gridview"
        android:id="@+id/fragGridViewDemo"
        android:name="com.landenlabs.all_uiTest.FragGridViewDemo"
        tools:layout="@layout/frag_gridview_demo"/>

    <fragment
        android:label="@string/bottom_nav_frag_divider"
        android:id="@+id/fragDividerDemo"
        android:name="com.landenlabs.all_uiTest.FragDividerDemo"
        tools:layout="@layout/frag_divider_demo"/>

    <fragment
        android:label="@string/bottom_nav_expand"
        android:id="@+id/fragExpandDemo"
        android:name="com.landenlabs.all_uiTest.FragExpandDemo"
        tools:layout="@layout/frag_expand_demo"/>

    <fragment
        android:label="@string/bottom_nav_group_view"
        android:id="@+id/fragExpandGroupViewDemo"
        android:name="com.landenlabs.all_uiTest.FragExpandGroupViewDemo"
        tools:layout="@layout/frag_expand_group_demo"/>

    <fragment
        android:label="@string/bottom_nav_group_image"
        android:id="@+id/fragExpandGroupImageDemo"
        android:name="com.landenlabs.all_uiTest.FragExpandGroupImageDemo"
        tools:layout="@layout/frag_expand_group_demo"/>

    <fragment
        android:label="@string/bottom_nav_anim_border"
        android:id="@+id/fragAnimBorderDemo"
        android:name="com.landenlabs.all_uiTest.FragAnimBorderDemo"
        tools:layout="@layout/frag_anim_border"/>

    <fragment
        android:label="@string/bottom_nav_bitmapshader"
        android:id="@+id/fragBitmapShaderDemo"
        android:name="com.landenlabs.all_uiTest.FragBitmapShaderDemo"
        tools:layout="@layout/frag_bitmapshader"/>

    <fragment
        android:label="@string/bottom_nav_anim_view"
        android:id="@+id/fragAnimViewDemo"
        android:name="com.landenlabs.all_uiTest.FragAnimViewDemo"
        tools:layout="@layout/frag_anim_view"/>

</navigation>